--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+<!--  Astrology Service  ජොතිෂය සේවය-->
 <head>
 <title>Home</title>
 <meta charset="utf-8">    
@@ -55,8 +56,8 @@
         <header class="clearfix">
             <nav class="navbar navbar-default navbar-static-top tm_navbar clearfix" role="navigation">
                 <ul class="nav sf-menu clearfix">
-                    <li class="active"><a href="index.html">home</a></li>
-                    <li class="sub-menu"><a href="index-1.html">about</a><span class="fa fa-angle-down"></span>
+                    <li class="active"><a href="index.html">home | මුල් පිටුව</a></li>
+                    <li class="sub-menu"><a href="index-1.html">about | අපි ගැන</a><span class="fa fa"></span>
                         <ul class="submenu">
             				<li><a href="#">columns 01</a></li>
                             <li><a href="#">columns 02</a></li>
@@ -68,19 +69,21 @@
                             </li>
             			</ul>
                     </li>
-                    <li><a href="index-2.html">articles</a></li>
-                    <li><a href="books.html">books</a></li>
-                    <li><a href="index-4.html">contacts</a></li>
+                    <li><a href="index-2.html">articles | ලිපි</a></li>
+                    <li><a href="books.html">books | පොත්</a></li>
+                    <li><a href="index-4.html">contacts | අමතන්න</a></li>
                 </ul>
             </nav>
             <ul class="follow_icon">
                 <li><a href="#"><img src="img/follow_icon1.png" alt=""></a></li>
                 <li><a href="#"><img src="img/follow_icon2.png" alt=""></a></li>
                 <li><a href="#"><img src="img/follow_icon3.png" alt=""></a></li>
+                <li><a href="#"><img src="img/follow_icon3.png" alt=""></a></li>
+                <li><a href="#"><img src="img/follow_icon3.png" alt=""></a></li>
             </ul>
         </header>
         <div class="logo_box">
-            <h1 class="navbar-brand navbar-brand_"><a href="index.html"><img src="img/logo.png" alt="logo"></a></h1>
+            <h1 class="navbar-brand navbar-brand_"><a href="index.html"><img src="img/zodiac/newLogo8.png" alt="logo"></a></h1>
             <div class="row">
                 <div class="col-lg-6 col-md-8 col-sm-10 col-lg-offset-3 col-md-offset-2 col-sm-offset-1">
                     <form id="search" class="search" action="search.php" method="GET" accept-charset="utf-8">
@@ -98,7 +101,7 @@
         <div class="box box1 wow fadeInUp" data-wow-delay="0.3s">
             <div><p>Praesent vestibulum aenean nonummy hendrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem.</p><a href="#" class="btn-default btn5">read more</a></div>
             <figure><img src="img/zodiac/aries.png" alt=""></figure>
-            <strong>aries</strong>
+            <strong>aries | මේෂ</strong>
         </div>
         <div class="box box2 wow fadeInUp" data-wow-delay="0.2s">
             <div><p>Praesent vestibulum aenean nonummy hendrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem.</p><a href="#" class="btn-default btn5">read more</a></div>
@@ -119,17 +122,17 @@
         <div class="box box5 wow fadeInUp" data-wow-delay="0.3s">
             <div><p>Praesent vestibulum aenean nonummy hendrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem.</p><a href="#" class="btn-default btn5">read more</a></div>
             <figure><img src="img/zodiac/leo-lion-head-side.png" alt=""></figure>
-            <strong>leo</strong>
+            <strong>leo | සිංහ</strong>
         </div>
         <div class="box box6 wow fadeInUp" data-wow-delay="0.2s">
             <div><p>Praesent vestibulum aenean nonummy hendrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem.</p><a href="#" class="btn-default btn5">read more</a></div>
             <figure><img src="img/zodiac/virgo.png" alt=""></figure>
-            <strong>virgo</strong>
+            <strong>virgo | කන්යා</strong>
         </div>
         <div class="box box7 wow fadeInUp" data-wow-delay="0.1s">
             <div><p>Praesent vestibulum aenean nonummy hendrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem.</p><a href="#" class="btn-default btn5">read more</a></div>
             <figure><img src="img/zodiac/libra-sign-1.png" alt=""></figure>
-            <strong>libra</strong>
+            <strong>libra | තුලා</strong>
         </div>
         <div class="box box8 wow fadeInUp">
             <div><p>Praesent vestibulum aenean nonummy hendrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem.</p><a href="#" class="btn-default btn5">read more</a></div>
@@ -155,25 +158,29 @@
         <div class="box box12 wow fadeInUp">
             <div><p>Praesent vestibulum aenean nonummy hendrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem.</p><a href="#" class="btn-default btn5">read more</a></div>
             <figure><img src="img/zodiac/pisces.png" alt=""></figure>
-            <strong>pisces</strong>
+            <strong>pisces | මීන</strong>
         </div>
+<!--
+        <br/>
+        <br/>
+-->
     </div>
 </div>
 <!--content-->
 <div class="content"> 
     <div class="thumb-box1">
         <div class="container">          
-            <h2>Let the stars help you to discover your fate</h2>
+            <h2>Let the stars help you to discover your fate | ඔබේ ඉරණම සොයා ගැනීමට තාරකා ඔබට උපකාර කරයි</h2>
             <ul class="list1">
-                <li><a href="#">Horoscopes</a></li>
-                <li><a href="#">psychics</a></li>
-                <li><a href="#">tarot</a></li>
-                <li><a href="#">oracles</a></li>
-                <li><a href="#">numerology</a></li>
-                <li><a href="#">forecasts</a></li>
-                <li><a href="#">faraway fortunes</a></li>
+                <li><a href="#">Horoscopes | හඳහන</a></li>
+                <li><a href="#">psychics | අධ්යාත්මිකය</a></li>
+<!--                <li><a href="#">tarot</a></li>-->
+                <li><a href="#">oracles | පුරෝකථනය</a></li>
+                <li><a href="#">numerology | සංඛ්යා ශාස්ත්රය</a></li>
+<!--                <li><a href="#">forecasts</a></li>-->
+<!--                <li><a href="#">faraway fortunes</a></li>-->
             </ul>
-            <strong>Today`s horoscope:</strong>
+            <strong>Today`s horoscope | අද හඳහන :</strong>
             <div class="row">
                 <div class="col-lg-5 col-md-6 col-sm-6 col-lg-offset-1">
                     <p>Praesent vestibulum aenean nonummy hendrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem.</p>
@@ -318,7 +325,7 @@
 <!--footer-->
 <footer> 
     <div class="container">
-        <figure><img src="img/foo_logo.png" alt=""></figure>
+        <figure><img src="img/zodiac/newLogofooter.png" alt=""></figure><br/>
         <p>&copy; <em id="copyright-year"></em> <span>|</span> <a href="index-5.html">Privacy Policy</a></p>
     </div>
   <!-- {%FOOTER_LINK} -->
