--- a/articles.html
+++ b/articles.html
@@ -95,7 +95,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 maxheight wow fadeInUp">
                     <div class="thumb-pad4 indent">
                         <div class="thumbnail">
-                            <figure><img src="img/page3_pic1.jpg" alt=""></figure>
+                            <figure><img src="img/whatisAstrology.jpg" alt=""></figure>
                             <div class="caption">
                                 <h4>Love & Relationships</h4>
                                 <p>Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. </p>
@@ -107,7 +107,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 maxheight wow fadeInUp" data-wow-delay="0.1s">
                     <div class="thumb-pad4 indent">
                         <div class="thumbnail">
-                            <figure><img src="img/page3_pic2.jpg" alt=""></figure>
+                            <figure><img src="img/whatisAstrology.jpg" alt=""></figure>
                             <div class="caption">
                                 <h4>Entertainment</h4>
                                 <p>Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus a lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. </p>
